[gd_scene load_steps=5 format=2]

[ext_resource path="res://environment/closing_door/ClosingDoorSectorFive.tscn" type="PackedScene" id=1]
[ext_resource path="res://environment/switch/SwitchSectorFive.tscn" type="PackedScene" id=2]
[ext_resource path="res://environment/closing_door/closing_door_with_switch_sector_five_save_manager.gd" type="Script" id=3]
[ext_resource path="res://environment/closing_door/closing_door_with_switch_sector_five.gd" type="Script" id=4]

[node name="ClosingDoorWithSwitchSectorFive" type="Node2D"]
script = ExtResource( 4 )

[node name="ClosingDoorSectorFive" parent="." instance=ExtResource( 1 )]

[node name="SwitchSectorFive" parent="." instance=ExtResource( 2 )]
position = Vector2( -24, 0 )

[node name="SaveManager" type="Node" parent="." groups=[
"save",
]]
script = ExtResource( 3 )
